# Sereno

./: LICENSE  README.md  compose.yaml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: issue-template.md
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
backend/src/sereno/: __init__.py  main.py
backend/src/sereno/api/: __init__.py  balances.py  budget.py  config.py  forecast.py  funds.py  guardrails.py  health.py  quick_links.py  sourcing.py
backend/src/sereno/db/: __init__.py  connection.py  seed.py
backend/src/sereno/db/migrations/: 0001_initial_schema.sql  0002_category_plan.sql  0003_account_emoji.sql  0004_carry_forward_views.sql  0005_fund_emoji.sql  0006_budget_month_fund_spend.sql  0007_fund_entry_source.sql  0008_income_source_label.sql  0009_sort_order.sql  0010_quick_links.sql  __init__.py
backend/src/sereno/engine/: __init__.py  forecast.py  funds.py  guardrails.py  sourcing.py
backend/tests/: test_balances.py  test_budget.py  test_budget_year.py  test_config.py  test_db_connection.py  test_forecast.py  test_forecast_api.py  test_fund_contributions.py  test_fund_notes.py  test_funds.py  test_guardrails.py  test_guardrails_api.py  test_health.py  test_max_affordable_api.py  test_migrations.py  test_quick_links.py  test_schema_views.py  test_seed.py  test_sourcing.py  test_sourcing_api.py  test_startup.py
docs/design/: Home Budget.dc.html  design-handoff.md  schema.sql
frontend/: Dockerfile  README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  (+19 more)
(+37 files in other folders)
