[project]
name = "sereno"
version = "2.2.0"
description = "Sereno backend — a private, LAN-only personal finance tracker"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
]

[dependency-groups]
dev = [
    "httpx2>=2.5.0",
    "pytest>=8.3",
    "ruff>=0.11",
    "ty",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sereno"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "C4",  # flake8-comprehensions
    "RET", # flake8-return
    "ANN", # flake8-annotations — all code is typed
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN"]

[tool.ruff.lint.isort]
# By name, not by resolution: a red TDD test imports the module it is
# about to force into existence, which must still sort as first-party.
known-first-party = ["sereno"]

[tool.pytest.ini_options]
testpaths = ["tests"]
